gitHub_link_sua_festa

--- a/index.html
+++ b/index.html
@@ -351,7 +351,8 @@
                                                     quantidade de
                                                     comida e bebida necessária para uma festa.</p>
                                                 <a href="https://github.com/igorfurtado/sua_festa"
-                                                    class="ift-btn ift-btn-large ift-btn-orange-no-scale">Ver
+                                                    class="ift-btn ift-btn-large ift-btn-orange-no-scale"
+                                                    target="_blank">Ver
                                                     projeto</a>
                                             </div>
                                         </div>
