gitHub_link_sua_festa

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -131,7 +131,7 @@
                                             comida e bebida necessária para uma festa.
                                         </p>
                                         <a href="https://github.com/igorfurtado/sua_festa"
-                                            class="ift-btn ift-btn-large ift-btn-orange-no-scale">Ver
+                                            class="ift-btn ift-btn-large ift-btn-orange-no-scale" target="_blank">Ver
                                             projeto</a>
                                     </div>
                                 </div>
