atualização mockup manage_it

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                                                 <div
                                                     class="ift-portfolio-item-box d-none d-sm-none d-lg-block ift-scale-right">
                                                 </div>
-                                                <img src="./imagens/thumb_imagens/thumb-2.jpg"
+                                                <img src="./LAYOUT/mockup_manage_it.png"
                                                     alt="Manage It! Aplicativo Mobile"
                                                     title="Manage It! Aplicativo Mobile" class="ift-scale-up" />
                                                 <a href="./portfolio/manage_it/"
