atualização mockup manage_it

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -106,7 +106,7 @@
                                 <div class="col-sm-12 col-lg-6 offset-lg-2 order-1 order-lg-2 col-xl-6 offset-xl-1">
                                     <div class="ift-portfolio-item-thumb">
                                         <div class="ift-portfolio-item-box d-none d-lg-block" data-aos="zoom-in"></div>
-                                        <img src="../imagens/thumb_imagens/thumb-2.jpg" alt="Manege It - App"
+                                        <img src="../LAYOUT/mockup_manage_it.png" alt="Manege It - App"
                                             title="Manege It - App" data-aos="flip-left" data-aos-offset="300"
                                             data-aos-delay="300" />
                                         <a href="./manage_it/" class="ift-btn ift-btn-medium ift-btn-dark"
