--- a/index.html
+++ b/index.html
@@ -379,9 +379,10 @@
                                         <div class="col-sm-12 col-md-12 col-lg-4 order-2 order-sm-2 order-md-1">
                                             <div class="ift-portfolio-item-info ift-text-light">
                                                 <h1 class="ift-title ift-tile-large-lh ift-margin-bottom-30">
-                                                    Meu terceiro
-                                                    projeto</h1>
-                                                <p class="ift-margin-bottom-30">Aguarde...</p>
+                                                    Jogo da velha</h1>
+                                                <p class="ift-margin-bottom-30">Jogo da velha criado com design
+                                                    responsivo,
+                                                    utilizando HTML, CSS e Javascript.</p>
                                                 <a href="#" class="ift-btn ift-btn-large ift-btn-orange-no-scale">Ver
                                                     projeto</a>
                                             </div>
@@ -390,9 +391,11 @@
                                             class="col-sm-12 col-md-12 col-lg-6 offset-lg-1 order-1 order-sm-1 order-md-2">
                                             <div class="ift-portfolio-item-thumb">
                                                 <div class="ift-portfolio-item-box d-none d-sm-none d-lg-block"></div>
-                                                <img src="./LAYOUT/em_breve.png" alt="Nome do projeto 03"
-                                                    title="Nome do projeto 03" />
-                                                <a href="#" class="ift-btn ift-btn-medium ift-btn-dark">Visitar site
+                                                <img src="./LAYOUT/em_breve.png" alt="Jogo da velha"
+                                                    title="Jogo da velha" />
+                                                <a href="./portfolio/jogo_da_velha/"
+                                                    class="ift-btn ift-btn-medium ift-btn-dark" target="_blank">Visitar
+                                                    site
                                                     <ion-icon name="arrow-redo-sharp"></ion-icon>
                                                 </a>
                                             </div>
