new: jogo da velha

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -157,9 +157,9 @@
                                     <div class="ift-portfolio-item-info ift-text-light" data-aos="fade-right"
                                         data-aos-delay="200">
                                         <h1 class="ift-title ift-tile-large-lh ift-margin-bottom-30">
-                                            Meu terceiro
-                                            projeto</h1>
-                                        <p class="ift-margin-bottom-30">Aguarde...</p>
+                                            Jogo da velha</h1>
+                                        <p class="ift-margin-bottom-30">Jogo da velha criado com design responsivo,
+                                            utilizando HTML, CSS e Javascript.</p>
                                         <a href="#" class="ift-btn ift-btn-large ift-btn-orange-no-scale">Ver
                                             projeto</a>
                                     </div>
@@ -167,10 +167,11 @@
                                 <div class="col-sm-12 col-lg-6 offset-lg-2 order-1 order-lg-2 col-xl-6 offset-xl-1">
                                     <div class="ift-portfolio-item-thumb">
                                         <div class="ift-portfolio-item-box d-none d-lg-block" data-aos="zoom-in"></div>
-                                        <img src="../LAYOUT/em_breve.png" alt="Nome do projeto 03"
-                                            title="Nome do projeto 03" data-aos="flip-left" data-aos-offset="300"
-                                            data-aos-delay="300" />
-                                        <a href="#" class="ift-btn ift-btn-medium ift-btn-dark">Visitar site
+                                        <img src="../LAYOUT/em_breve.png" alt="Jogo da velha" title="Jogo da velha"
+                                            data-aos="flip-left" data-aos-offset="300" data-aos-delay="300" />
+                                        <a href="./jogo_da_velha/" class="ift-btn ift-btn-medium ift-btn-dark"
+                                            target="_blank">Visitar
+                                            site
                                             <ion-icon name="arrow-redo-sharp"></ion-icon>
                                         </a>
                                     </div>
