--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -167,8 +167,9 @@
                                 <div class="col-sm-12 col-lg-6 offset-lg-2 order-1 order-lg-2 col-xl-6 offset-xl-1">
                                     <div class="ift-portfolio-item-thumb">
                                         <div class="ift-portfolio-item-box d-none d-lg-block" data-aos="zoom-in"></div>
-                                        <img src="../LAYOUT/em_breve.png" alt="Jogo da velha" title="Jogo da velha"
-                                            data-aos="flip-left" data-aos-offset="300" data-aos-delay="300" />
+                                        <img src="./jogo_da_velha/assets/mockup_jogo_da_velha.png" alt="Jogo da velha"
+                                            title="Jogo da velha" data-aos="flip-left" data-aos-offset="300"
+                                            data-aos-delay="300" />
                                         <a href="./jogo_da_velha/" class="ift-btn ift-btn-medium ift-btn-dark"
                                             target="_blank">Visitar
                                             site
