--- a/index.html
+++ b/index.html
@@ -391,8 +391,8 @@
                                             class="col-sm-12 col-md-12 col-lg-6 offset-lg-1 order-1 order-sm-1 order-md-2">
                                             <div class="ift-portfolio-item-thumb">
                                                 <div class="ift-portfolio-item-box d-none d-sm-none d-lg-block"></div>
-                                                <img src="./LAYOUT/em_breve.png" alt="Jogo da velha"
-                                                    title="Jogo da velha" />
+                                                <img src="./portfolio/jogo_da_velha/assets/mockup_jogo_da_velha.png"
+                                                    alt="Jogo da velha" title="Jogo da velha" />
                                                 <a href="./portfolio/jogo_da_velha/"
                                                     class="ift-btn ift-btn-medium ift-btn-dark" target="_blank">Visitar
                                                     site
