atualização github jogo da velha

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -160,7 +160,8 @@
                                             Jogo da velha</h1>
                                         <p class="ift-margin-bottom-30">Jogo da velha criado com design responsivo,
                                             utilizando HTML, CSS e Javascript.</p>
-                                        <a href="#" class="ift-btn ift-btn-large ift-btn-orange-no-scale">Ver
+                                        <a href="https://github.com/igorfurtado/jogo_da_velha"
+                                            class="ift-btn ift-btn-large ift-btn-orange-no-scale" target="_blank">Ver
                                             projeto</a>
                                     </div>
                                 </div>
