--- a/index.html
+++ b/index.html
@@ -412,10 +412,13 @@
                                         <div class="col-sm-12 col-md-12 col-lg-4 order-2 order-sm-2 order-md-1">
                                             <div class="ift-portfolio-item-info ift-text-light">
                                                 <h1 class="ift-title ift-tile-large-lh ift-margin-bottom-30">
-                                                    Meu quarto
-                                                    projeto</h1>
-                                                <p class="ift-margin-bottom-30">Aguarde...</p>
-                                                <a href="#" class="ift-btn ift-btn-large ift-btn-orange-no-scale">Ver
+                                                    Jogo da memória</h1>
+                                                <p class="ift-margin-bottom-30">Jogo da memória com o tema: tecnologias
+                                                    web. Tecnologias utilizadas: HTML, CSS e JS. Utilização do método
+                                                    Model-View-Controller (MVC) para organização dos arquivos JS.</p>
+                                                <a href="https://github.com/igorfurtado/jogo_da_memoria"
+                                                    class="ift-btn ift-btn-large ift-btn-orange-no-scale"
+                                                    target="_blank">Ver
                                                     projeto</a>
                                             </div>
                                         </div>
@@ -423,9 +426,11 @@
                                             class="col-sm-12 col-md-12 col-lg-6 offset-lg-1 order-1 order-sm-1 order-md-2">
                                             <div class="ift-portfolio-item-thumb">
                                                 <div class="ift-portfolio-item-box d-none d-sm-none d-lg-block"></div>
-                                                <img src="./LAYOUT/em_breve.png" alt="Nome do projeto 04"
-                                                    title="Nome do projeto 04" />
-                                                <a href="#" class="ift-btn ift-btn-medium ift-btn-dark">Visitar site
+                                                <img src="./LAYOUT/em_breve.png" alt="Jogo da memória"
+                                                    title="Jogo da memória" />
+                                                <a href="./portfolio/jogo_da_memoria/"
+                                                    class="ift-btn ift-btn-medium ift-btn-dark" target="_blank">Visitar
+                                                    site
                                                     <ion-icon name="arrow-redo-sharp"></ion-icon>
                                                 </a>
                                             </div>
