New: jogo da memória

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -189,20 +189,23 @@
                                     <div class="ift-portfolio-item-info ift-text-light" data-aos="fade-left"
                                         data-aos-delay="200">
                                         <h1 class="ift-title ift-tile-large-lh ift-margin-bottom-30">
-                                            Meu quarto
-                                            projeto</h1>
-                                        <p class="ift-margin-bottom-30">Aguarde...</p>
-                                        <a href="#" class="ift-btn ift-btn-large ift-btn-orange-no-scale">Ver
+                                            Jogo da memória</h1>
+                                        <p class="ift-margin-bottom-30">Jogo da memória com o tema: tecnologias web.
+                                            Tecnologias utilizadas: HTML, CSS e JS. Utilização do método
+                                            Model-View-Controller (MVC) para organização dos arquivos JS.</p>
+                                        <a href="https://github.com/igorfurtado/jogo_da_memoria"
+                                            class="ift-btn ift-btn-large ift-btn-orange-no-scale" target="_blank">Ver
                                             projeto</a>
                                     </div>
                                 </div>
                                 <div class="col-sm-12 col-lg-6 order-1 order-lg-2">
                                     <div class="ift-portfolio-item-thumb">
                                         <div class="ift-portfolio-item-box d-none d-lg-block" data-aos="zoom-in"></div>
-                                        <img src="../LAYOUT/em_breve.png" alt="Nome do projeto 04"
-                                            title="Nome do projeto 04" data-aos="flip-left" data-aos-offset="300"
-                                            data-aos-delay="300" />
-                                        <a href="#" class="ift-btn ift-btn-medium ift-btn-dark">Visitar site
+                                        <img src="../LAYOUT/em_breve.png" alt="Jogo da memória" title="Jogo da memória"
+                                            data-aos="flip-left" data-aos-offset="300" data-aos-delay="300" />
+                                        <a href="./jogo_da_memoria/" class="ift-btn ift-btn-medium ift-btn-dark"
+                                            target="_blank">Visitar
+                                            site
                                             <ion-icon name="arrow-redo-sharp"></ion-icon>
                                         </a>
                                     </div>
