--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -201,8 +201,9 @@
                                 <div class="col-sm-12 col-lg-6 order-1 order-lg-2">
                                     <div class="ift-portfolio-item-thumb">
                                         <div class="ift-portfolio-item-box d-none d-lg-block" data-aos="zoom-in"></div>
-                                        <img src="../LAYOUT/em_breve.png" alt="Jogo da memória" title="Jogo da memória"
-                                            data-aos="flip-left" data-aos-offset="300" data-aos-delay="300" />
+                                        <img src="./jogo_da_memoria/assets/mockup_jogo_da_memoria.jpg"
+                                            alt="Jogo da memória" title="Jogo da memória" data-aos="flip-left"
+                                            data-aos-offset="300" data-aos-delay="300" />
                                         <a href="./jogo_da_memoria/" class="ift-btn ift-btn-medium ift-btn-dark"
                                             target="_blank">Visitar
                                             site
