--- a/index.html
+++ b/index.html
@@ -426,8 +426,8 @@
                                             class="col-sm-12 col-md-12 col-lg-6 offset-lg-1 order-1 order-sm-1 order-md-2">
                                             <div class="ift-portfolio-item-thumb">
                                                 <div class="ift-portfolio-item-box d-none d-sm-none d-lg-block"></div>
-                                                <img src="./LAYOUT/em_breve.png" alt="Jogo da memória"
-                                                    title="Jogo da memória" />
+                                                <img src="./portfolio/jogo_da_memoria/assets/mockup_jogo_da_memoria.jpg"
+                                                    alt="Jogo da memória" title="Jogo da memória" />
                                                 <a href="./portfolio/jogo_da_memoria/"
                                                     class="ift-btn ift-btn-medium ift-btn-dark" target="_blank">Visitar
                                                     site
