--- a/index.html
+++ b/index.html
@@ -445,7 +445,42 @@
                                         <div class="col-sm-12 col-md-12 col-lg-4 order-2 order-sm-2 order-md-1">
                                             <div class="ift-portfolio-item-info ift-text-light">
                                                 <h1 class="ift-title ift-tile-large-lh ift-margin-bottom-30">
-                                                    Meu quinto
+                                                    Escola Frutos</h1>
+                                                <p class="ift-margin-bottom-30">Controle acadêmico desenvolvido para
+                                                    acesso de alunos e professores da Escola Frutos. Através deste, é
+                                                    possível implementação/consulta de notas, faltas e ocorrências, além
+                                                    do cadastro ou exclusão de usuários. Tecnologias utilizadas: HTML,
+                                                    CSS, JS e Firebase (Authentication & Database). </p>
+                                                <a href="https://github.com/igorfurtado/escola_frutos"
+                                                    class="ift-btn ift-btn-large ift-btn-orange-no-scale"
+                                                    target="_blank">Ver
+                                                    projeto</a>
+                                            </div>
+                                        </div>
+                                        <div
+                                            class="col-sm-12 col-md-12 col-lg-6 offset-lg-1 order-1 order-sm-1 order-md-2">
+                                            <div class="ift-portfolio-item-thumb">
+                                                <div class="ift-portfolio-item-box d-none d-sm-none d-lg-block"></div>
+                                                <img src="./LAYOUT/em_breve.png" alt="Nome do projeto 05"
+                                                    title="Nome do projeto 05" />
+                                                <a href="./portfolio/escola_frutos/"
+                                                    class="ift-btn ift-btn-medium ift-btn-dark" target="_blank">Visitar
+                                                    site
+                                                    <ion-icon name="arrow-redo-sharp"></ion-icon>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </li>
+
+                                <li class="ift-portfolio-item" data-slide="6">
+
+                                    <div class="row">
+                                        <div class="col-sm-12 col-md-12 col-lg-4 order-2 order-sm-2 order-md-1">
+                                            <div class="ift-portfolio-item-info ift-text-light">
+                                                <h1 class="ift-title ift-tile-large-lh ift-margin-bottom-30">
+                                                    Meu sexto
                                                     projeto</h1>
                                                 <p class="ift-margin-bottom-30">Aguarde...</p>
                                                 <a href="#" class="ift-btn ift-btn-large ift-btn-orange-no-scale">Ver
@@ -456,8 +491,36 @@
                                             class="col-sm-12 col-md-12 col-lg-6 offset-lg-1 order-1 order-sm-1 order-md-2">
                                             <div class="ift-portfolio-item-thumb">
                                                 <div class="ift-portfolio-item-box d-none d-sm-none d-lg-block"></div>
-                                                <img src="./LAYOUT/em_breve.png" alt="Nome do projeto 05"
-                                                    title="Nome do projeto 05" />
+                                                <img src="./LAYOUT/em_breve.png" alt="Nome do projeto 06"
+                                                    title="Nome do projeto 06" />
+                                                <a href="#" class="ift-btn ift-btn-medium ift-btn-dark">Visitar site
+                                                    <ion-icon name="arrow-redo-sharp"></ion-icon>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </li>
+
+                                <li class="ift-portfolio-item" data-slide="7">
+
+                                    <div class="row">
+                                        <div class="col-sm-12 col-md-12 col-lg-4 order-2 order-sm-2 order-md-1">
+                                            <div class="ift-portfolio-item-info ift-text-light">
+                                                <h1 class="ift-title ift-tile-large-lh ift-margin-bottom-30">
+                                                    Meu sétimo
+                                                    projeto</h1>
+                                                <p class="ift-margin-bottom-30">Aguarde...</p>
+                                                <a href="#" class="ift-btn ift-btn-large ift-btn-orange-no-scale">Ver
+                                                    projeto</a>
+                                            </div>
+                                        </div>
+                                        <div
+                                            class="col-sm-12 col-md-12 col-lg-6 offset-lg-1 order-1 order-sm-1 order-md-2">
+                                            <div class="ift-portfolio-item-thumb">
+                                                <div class="ift-portfolio-item-box d-none d-sm-none d-lg-block"></div>
+                                                <img src="./LAYOUT/em_breve.png" alt="Nome do projeto 07"
+                                                    title="Nome do projeto 07" />
                                                 <a href="#" class="ift-btn ift-btn-medium ift-btn-dark">Visitar site
                                                     <ion-icon name="arrow-redo-sharp"></ion-icon>
                                                 </a>
