--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                                                     acesso de alunos e professores da Escola Frutos. Através deste, é
                                                     possível implementação/consulta de notas, faltas e ocorrências, além
                                                     do cadastro ou exclusão de usuários. Tecnologias utilizadas: HTML,
-                                                    CSS, JS e Firebase (Authentication & Database). </p>
+                                                    CSS, JS e Firebase (Authentication & Database).</p>
                                                 <a href="https://github.com/igorfurtado/escola_frutos"
                                                     class="ift-btn ift-btn-large ift-btn-orange-no-scale"
                                                     target="_blank">Ver
@@ -461,8 +461,8 @@
                                             class="col-sm-12 col-md-12 col-lg-6 offset-lg-1 order-1 order-sm-1 order-md-2">
                                             <div class="ift-portfolio-item-thumb">
                                                 <div class="ift-portfolio-item-box d-none d-sm-none d-lg-block"></div>
-                                                <img src="./LAYOUT/em_breve.png" alt="Nome do projeto 05"
-                                                    title="Nome do projeto 05" />
+                                                <img src="./LAYOUT/em_breve.png" alt="Escola Frutos"
+                                                    title="Escola Frutos" />
                                                 <a href="./portfolio/escola_frutos/"
                                                     class="ift-btn ift-btn-medium ift-btn-dark" target="_blank">Visitar
                                                     site
