--- a/portfolio/escola_frutos/pages/studentArea/index.html
+++ b/portfolio/escola_frutos/pages/studentArea/index.html
@@ -11,7 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,400;0,700;0,800;1,400;1,700;1,800&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="../CSS/student.css">
+    <link rel="stylesheet" href="../../CSS/student.css">
     <title>Área do aluno</title>
 </head>
 
@@ -21,7 +21,7 @@
     </div>
     <div class="student-profile">
         <div class="profile-elipse">
-            <img src="../assets/escola-frutos.png">
+            <img src="../../assets/escola-frutos.png">
         </div>
         <h3>Aluno(a)</h3>
         <h1>Olá, <span id="bemVindoAluno">ALUNO(A)!</span></h1>
@@ -29,13 +29,13 @@
     <div class="actions-menu">
         <div class="action-center" id="students-grades" onclick="mostraNotas()">
             <div class="actions-elipse">
-                <img src="../assets/test-white.png">
+                <img src="../../assets/test-white.png">
             </div>
             <h3>NOTAS</h3>
         </div>
         <div class="action-center" id="students-absences">
             <div class="actions-elipse">
-                <img src="../assets/presence-white.png" style="
+                <img src="../../assets/presence-white.png" style="
                 margin-left: -7px;
                 margin-bottom: 5px;
             ">
@@ -44,7 +44,7 @@
         </div>
         <div class="action-center" id="students-ocurrences" onclick="mostraOcorrências()">
             <div class="actions-elipse">
-                <img src="../assets/ocurrence-white.png">
+                <img src="../../assets/ocurrence-white.png">
             </div>
             <h3>OCORRÊNCIAS</h3>
         </div>
@@ -58,7 +58,7 @@
                 <h1>NOTAS</h1>
                 <div>
                     <button class="close-btn" id="close-btn-grades">
-                        <img src="../assets/close-white.png">
+                        <img src="../../assets/close-white.png">
                     </button>
                 </div>
             </div>
@@ -121,7 +121,7 @@
                 <h1>FALTAS</h1>
                 <div>
                     <button class="close-btn" id="close-btn-absences">
-                        <img src="../assets/close-white.png">
+                        <img src="../../assets/close-white.png">
                     </button>
                 </div>
             </div>
@@ -152,7 +152,7 @@
                 <h1>OCORRÊNCIAS</h1>
                 <div>
                     <button class="close-btn" id="close-btn-ocurrences">
-                        <img src="../assets/close-white.png">
+                        <img src="../../assets/close-white.png">
                     </button>
                 </div>
             </div>
@@ -187,9 +187,9 @@
 
 
     <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase.js"></script>
-    <script src="../js/config.js"></script>
-    <script src="../js/students.js"></script>
-    <script src="../js/logout.js"></script>
+    <script src="../../js/config.js"></script>
+    <script src="../../js/students.js"></script>
+    <script src="../../js/logout.js"></script>
 </body>
 
 </html>
