--- a/portfolio/escola_frutos/pages/teacherArea/index.html
+++ b/portfolio/escola_frutos/pages/teacherArea/index.html
@@ -11,7 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,400;0,700;0,800;1,400;1,700;1,800&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="../CSS/teacher.css">
+    <link rel="stylesheet" href="../../CSS/teacher.css">
     <title>Área do aluno</title>
 </head>
 
@@ -21,7 +21,7 @@
     </div>
     <div class="teacher-profile">
         <div class="profile-elipse">
-            <img src="../assets/escola-frutos-light-version.png">
+            <img src="../../assets/escola-frutos-light-version.png">
         </div>
         <h3>Professor(a)</h3>
         <h1>Olá, <span>PROFESSOR(A)!</span></h1>
@@ -29,19 +29,19 @@
     <div class="actions-menu">
         <div class="action-center" id="users">
             <div class="actions-elipse">
-                <img src="../assets/user.png">
+                <img src="../../assets/user.png">
             </div>
             <h3>ALUNOS</h3>
         </div>
         <div class="action-center" id="grades">
             <div class="actions-elipse">
-                <img src="../assets/test.png">
+                <img src="../../assets/test.png">
             </div>
             <h3>NOTAS</h3>
         </div>
         <div class="action-center" id="absences">
             <div class="actions-elipse">
-                <img src="../assets/presence.png" style="
+                <img src="../../assets/presence.png" style="
                 margin-left: -7px;
                 margin-bottom: 5px;
             ">
@@ -50,7 +50,7 @@
         </div>
         <div class="action-center" id="ocurrences">
             <div class="actions-elipse">
-                <img src="../assets/ocurrence.png">
+                <img src="../../assets/ocurrence.png">
             </div>
             <h3>OCORRÊNCIAS</h3>
         </div>
@@ -66,7 +66,7 @@
                 <h1>OCORRÊNCIAS</h1>
                 <div>
                     <button class="close-btn" id="close-btn-ocurrences">
-                        <img src="../assets/close-white.png">
+                        <img src="../../assets/close-white.png">
                     </button>
                 </div>
             </div>
@@ -118,7 +118,7 @@
                 <h1>FALTAS</h1>
                 <div>
                     <button class="close-btn" id="close-btn-absences">
-                        <img src="../assets/close-white.png">
+                        <img src="../../assets/close-white.png">
                     </button>
                 </div>
             </div>
@@ -190,7 +190,7 @@
                 <h1>NOTAS</h1>
                 <div>
                     <button class="close-btn" id="close-btn-grades">
-                        <img src="../assets/close-white.png">
+                        <img src="../../assets/close-white.png">
                     </button>
                 </div>
             </div>
@@ -252,7 +252,7 @@
                 <h1>CADASTRAR ALUNO(A):</h1>
                 <div>
                     <button class="close-btn" id="close-btn-users">
-                        <img src="../assets/close-white.png">
+                        <img src="../../assets/close-white.png">
                     </button>
                 </div>
             </div>
@@ -329,9 +329,9 @@
 
 
     <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase.js"></script>
-    <script src="../js/config.js"></script>
-    <script src="../js/teachers.js"></script>
-    <script src="../js/logout.js"></script>
+    <script src="../../js/config.js"></script>
+    <script src="../../js/teachers.js"></script>
+    <script src="../../js/logout.js"></script>
 </body>
 
 </html>
