--- a/sobre/index.html
+++ b/sobre/index.html
@@ -186,6 +186,12 @@
                             <img src="../LAYOUT/figma_logo.png" class="ift-margin-top-5">
                         </div>
                     </div>
+                    <div class="ift-home-about-boxes-bottom">
+                        <div class="ift-text-light ift-footer-text ift-home-about-justify">
+                            FIREBASE
+                            <img src="../LAYOUT/firebase_logo.png" class="ift-margin-top-5">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
