--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                                             class="col-sm-12 col-md-12 col-lg-6 offset-lg-1 order-1 order-sm-1 order-md-2">
                                             <div class="ift-portfolio-item-thumb">
                                                 <div class="ift-portfolio-item-box d-none d-sm-none d-lg-block"></div>
-                                                <img src="./portfolio/jogo_da_memoria/assets/mockup_jogo_da_memoria.jpg"
+                                                <img src="./LAYOUT/mockup_novo_jogo_da_memoria.jpg"
                                                     alt="Jogo da memória" title="Jogo da memória" />
                                                 <a href="./portfolio/jogo_da_memoria/"
                                                     class="ift-btn ift-btn-medium ift-btn-dark" target="_blank">Visitar
@@ -453,10 +453,9 @@
                                                 <h1 class="ift-title ift-tile-large-lh ift-margin-bottom-30">
                                                     Escola Frutos</h1>
                                                 <p class="ift-margin-bottom-30">Controle acadêmico desenvolvido para
-                                                    acesso de alunos e professores da Escola Frutos. Através deste, é
-                                                    possível implementação/consulta de notas, faltas e ocorrências, além
-                                                    do cadastro ou exclusão de usuários. Tecnologias utilizadas: HTML,
-                                                    CSS, JS e Firebase (Authentication & Database).</p>
+                                                    acesso de alunos e professores da Escola Frutos. Tecnologias
+                                                    utilizadas: HTML, CSS, JS e Firebase (Authentication & Database).
+                                                </p>
                                                 <a href="https://github.com/igorfurtado/escola_frutos"
                                                     class="ift-btn ift-btn-large ift-btn-orange-no-scale"
                                                     target="_blank">Ver
@@ -467,7 +466,7 @@
                                             class="col-sm-12 col-md-12 col-lg-6 offset-lg-1 order-1 order-sm-1 order-md-2">
                                             <div class="ift-portfolio-item-thumb">
                                                 <div class="ift-portfolio-item-box d-none d-sm-none d-lg-block"></div>
-                                                <img src="./LAYOUT/em_breve.png" alt="Escola Frutos"
+                                                <img src="./LAYOUT/mockup-escola-frutos.jpg" alt="Escola Frutos"
                                                     title="Escola Frutos" />
                                                 <a href="./portfolio/escola_frutos/"
                                                     class="ift-btn ift-btn-medium ift-btn-dark" target="_blank">Visitar
