--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -201,9 +201,9 @@
                                 <div class="col-sm-12 col-lg-6 order-1 order-lg-2">
                                     <div class="ift-portfolio-item-thumb">
                                         <div class="ift-portfolio-item-box d-none d-lg-block" data-aos="zoom-in"></div>
-                                        <img src="./jogo_da_memoria/assets/mockup_jogo_da_memoria.jpg"
-                                            alt="Jogo da memória" title="Jogo da memória" data-aos="flip-left"
-                                            data-aos-offset="300" data-aos-delay="300" />
+                                        <img src="../LAYOUT/mockup_novo_jogo_da_memoria.jpg" alt="Jogo da memória"
+                                            title="Jogo da memória" data-aos="flip-left" data-aos-offset="300"
+                                            data-aos-delay="300" />
                                         <a href="./jogo_da_memoria/" class="ift-btn ift-btn-medium ift-btn-dark"
                                             target="_blank">Visitar
                                             site
@@ -224,10 +224,8 @@
                                         <h1 class="ift-title ift-tile-large-lh ift-margin-bottom-30">
                                             Escola Frutos</h1>
                                         <p class="ift-margin-bottom-30">Controle acadêmico desenvolvido para
-                                            acesso de alunos e professores da Escola Frutos. Através deste, é
-                                            possível implementação/consulta de notas, faltas e ocorrências, além
-                                            do cadastro ou exclusão de usuários. Tecnologias utilizadas: HTML,
-                                            CSS, JS e Firebase (Authentication & Database).</p>
+                                            acesso de alunos e professores da Escola Frutos. Tecnologias
+                                            utilizadas: HTML, CSS, JS e Firebase (Authentication & Database).</p>
                                         <a href="https://github.com/igorfurtado/escola_frutos"
                                             class="ift-btn ift-btn-large ift-btn-orange-no-scale" target="_blank">Ver
                                             projeto</a>
@@ -236,8 +234,9 @@
                                 <div class="col-sm-12 col-lg-6 offset-lg-2 order-1 order-lg-2 col-xl-6 offset-xl-1">
                                     <div class="ift-portfolio-item-thumb">
                                         <div class="ift-portfolio-item-box d-none d-lg-block" data-aos="zoom-in"></div>
-                                        <img src="../LAYOUT/em_breve.png" alt="Escola Frutos" title="Escola Frutos"
-                                            data-aos="flip-left" data-aos-offset="300" data-aos-delay="300" />
+                                        <img src="../LAYOUT/mockup-escola-frutos.jpg" alt="Escola Frutos"
+                                            title="Escola Frutos" data-aos="flip-left" data-aos-offset="300"
+                                            data-aos-delay="300" />
                                         <a href="./escola_frutos/" class="ift-btn ift-btn-medium ift-btn-dark"
                                             target="_blank">Visitar
                                             site
