--- a/index.html
+++ b/index.html
@@ -485,10 +485,13 @@
                                         <div class="col-sm-12 col-md-12 col-lg-4 order-2 order-sm-2 order-md-1">
                                             <div class="ift-portfolio-item-info ift-text-light">
                                                 <h1 class="ift-title ift-tile-large-lh ift-margin-bottom-30">
-                                                    Meu sexto
-                                                    projeto</h1>
-                                                <p class="ift-margin-bottom-30">Aguarde...</p>
-                                                <a href="#" class="ift-btn ift-btn-large ift-btn-orange-no-scale">Ver
+                                                    You Chat!</h1>
+                                                <p class="ift-margin-bottom-30">Sala de bate-papo virtual criada com
+                                                    Express e Socket.io para troca de mensagens simultâneas entre
+                                                    usuários.</p>
+                                                <a href="https://github.com/igorfurtado/chat_socket"
+                                                    class="ift-btn ift-btn-large ift-btn-orange-no-scale"
+                                                    target="_blank">Ver
                                                     projeto</a>
                                             </div>
                                         </div>
@@ -496,9 +499,10 @@
                                             class="col-sm-12 col-md-12 col-lg-6 offset-lg-1 order-1 order-sm-1 order-md-2">
                                             <div class="ift-portfolio-item-thumb">
                                                 <div class="ift-portfolio-item-box d-none d-sm-none d-lg-block"></div>
-                                                <img src="./LAYOUT/em_breve.png" alt="Nome do projeto 06"
-                                                    title="Nome do projeto 06" />
-                                                <a href="#" class="ift-btn ift-btn-medium ift-btn-dark">Visitar site
+                                                <img src="./LAYOUT/em_breve.png" alt="You Chat!" title="You Chat!" />
+                                                <a href="https://appyouchat.herokuapp.com/"
+                                                    class="ift-btn ift-btn-medium ift-btn-dark" target="_blank">Visitar
+                                                    site
                                                     <ion-icon name="arrow-redo-sharp"></ion-icon>
                                                 </a>
                                             </div>
