--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -255,20 +255,22 @@
                                     <div class="ift-portfolio-item-info ift-text-light" data-aos="fade-left"
                                         data-aos-delay="200">
                                         <h1 class="ift-title ift-tile-large-lh ift-margin-bottom-30">
-                                            Meu sexto projeto</h1>
-                                        <p class="ift-margin-bottom-30">Aguarde...</p>
-                                        <a href="#" class="ift-btn ift-btn-large ift-btn-orange-no-scale"
-                                            target="_blank">Ver
+                                            You Chat!</h1>
+                                        <p class="ift-margin-bottom-30">Sala de bate-papo virtual criada com
+                                            Express e Socket.io para troca de mensagens simultâneas entre
+                                            usuários.</p>
+                                        <a href="https://github.com/igorfurtado/chat_socket"
+                                            class="ift-btn ift-btn-large ift-btn-orange-no-scale" target="_blank">Ver
                                             projeto</a>
                                     </div>
                                 </div>
                                 <div class="col-sm-12 col-lg-6 order-1 order-lg-2">
                                     <div class="ift-portfolio-item-thumb">
                                         <div class="ift-portfolio-item-box d-none d-lg-block" data-aos="zoom-in"></div>
-                                        <img src="../LAYOUT/em_breve.png" alt="Nome do projeto 06"
-                                            title="Nome do projeto 06" data-aos="flip-left" data-aos-offset="300"
-                                            data-aos-delay="300" />
-                                        <a href="#" class="ift-btn ift-btn-medium ift-btn-dark" target="_blank">Visitar
+                                        <img src="../LAYOUT/em_breve.png" alt="You Chat!" title="You Chat!"
+                                            data-aos="flip-left" data-aos-offset="300" data-aos-delay="300" />
+                                        <a href="https://appyouchat.herokuapp.com/"
+                                            class="ift-btn ift-btn-medium ift-btn-dark" target="_blank">Visitar
                                             site
                                             <ion-icon name="arrow-redo-sharp"></ion-icon>
                                         </a>
