YouChat! mockup add

--- a/index.html
+++ b/index.html
@@ -499,7 +499,8 @@
                                             class="col-sm-12 col-md-12 col-lg-6 offset-lg-1 order-1 order-sm-1 order-md-2">
                                             <div class="ift-portfolio-item-thumb">
                                                 <div class="ift-portfolio-item-box d-none d-sm-none d-lg-block"></div>
-                                                <img src="./LAYOUT/em_breve.png" alt="You Chat!" title="You Chat!" />
+                                                <img src="./LAYOUT/youChat-mockup.jpg" alt="You Chat!"
+                                                    title="You Chat!" />
                                                 <a href="https://appyouchat.herokuapp.com/"
                                                     class="ift-btn ift-btn-medium ift-btn-dark" target="_blank">Visitar
                                                     site
