--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -267,7 +267,7 @@
                                 <div class="col-sm-12 col-lg-6 order-1 order-lg-2">
                                     <div class="ift-portfolio-item-thumb">
                                         <div class="ift-portfolio-item-box d-none d-lg-block" data-aos="zoom-in"></div>
-                                        <img src="../LAYOUT/em_breve.png" alt="You Chat!" title="You Chat!"
+                                        <img src="../LAYOUT/youChat-mockup.jpg" alt="You Chat!" title="You Chat!"
                                             data-aos="flip-left" data-aos-offset="300" data-aos-delay="300" />
                                         <a href="https://appyouchat.herokuapp.com/"
                                             class="ift-btn ift-btn-medium ift-btn-dark" target="_blank">Visitar
