Atualização - Título da página

--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="./CSS/bootstrap-grid.min.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./CSS/main.css" />
-    <title>Igor Furtado - Front-end Developer - 404 Error</title>
+    <title>Igor Targino - Front-end Developer - 404 Error</title>
 </head>
 
 <body>
