Atualização de logotipo

--- a/portfolio/manage_it/index.html
+++ b/portfolio/manage_it/index.html
@@ -10,11 +10,11 @@
     <link
         href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,400;0,700;0,800;1,400;1,700;1,800&display=swap"
         rel="stylesheet">
-    <link rel="icon" type="imagem/png" href="../../LAYOUT/logo-IF-front-end_shortcut.png" />
+    <link rel="icon" type="imagem/png" href="../../LAYOUT/logo-IT-front-end-shortcut.png" />
     <link rel="stylesheet" type="text/css" href="../../CSS/bootstrap-grid.min.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../../CSS/main.css" />
-    <title>Manage It - Igor Furtado - Front-end Developer</title>
+    <title>Manage It - Igor Targino - Front-end Developer</title>
 </head>
 
 
@@ -62,7 +62,7 @@
 
     <header class="ift-top-bar">
         <div class="ift-logo ift-logo-bigger">
-            <img src="../../LAYOUT/logo-ift-front-end.svg" alt="Logo - Igor Furtado - Front-end Developer" />
+            <img src="../../LAYOUT/logo-IT-front-end.svg" alt="Logo - Igor Targino - Front-end Developer" />
         </div>
         <nav class="ift-menu">
             <a href="../../">Home</a>
