Adição de logos - tecnologias

--- a/sobre/index.html
+++ b/sobre/index.html
@@ -165,7 +165,7 @@
 
         <div style="text-align: center;">
             <div style="display: inline-block; position: relative; bottom: -100px; margin-bottom: 30px;">
-                <div class="ift-horizontal-align">
+                <div class="ift-horizontal-align-about">
                     <div class="ift-home-about-boxes">
                         <div class="ift-text-light ift-footer-text ift-home-about-justify">
                             HTML 5
@@ -179,7 +179,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="ift-horizontal-align">
+                <div class="ift-horizontal-align-about">
                     <div class="ift-home-about-boxes">
                         <div class="ift-text-light ift-footer-text ift-home-about-justify">
                             JS ES6+
@@ -193,7 +193,21 @@
                         </div>
                     </div>
                 </div>
-                <div class="ift-horizontal-align">
+                <div class="ift-horizontal-align-about">
+                    <div class="ift-home-about-boxes">
+                        <div class="ift-text-light ift-footer-text ift-home-about-justify">
+                            EXPRESS
+                            <img src="../LAYOUT/node_logo.png" class="ift-margin-top-5">
+                        </div>
+                    </div>
+                    <div class="ift-home-about-boxes-bottom">
+                        <div class="ift-text-light ift-footer-text ift-home-about-justify">
+                            REACT
+                            <img src="../LAYOUT/react_logo.png" class="ift-margin-top-5">
+                        </div>
+                    </div>
+                </div>
+                <div class="ift-horizontal-align-about">
                     <div class="ift-home-about-boxes">
                         <div class="ift-text-light ift-footer-text ift-home-about-justify">
                             FIGMA
