Adição de logos - tecnologias

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 offset-lg-1 ift-boxes-margin ift-about-center">
+                    <div class="col-12 col-lg-11 offset-lg-1 ift-boxes-margin ift-about-center">
                         <div style="display: inline-block;">
                             <div class="ift-horizontal-align">
                                 <div class="ift-home-about-boxes">
@@ -260,6 +260,20 @@
                                     <div class="ift-text-light ift-footer-text ift-home-about-justify">
                                         BOOTSTRAP
                                         <img src="./LAYOUT/bootstrap_logo.png" class="ift-margin-top-5">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="ift-horizontal-align">
+                                <div class="ift-home-about-boxes">
+                                    <div class="ift-text-light ift-footer-text ift-home-about-justify">
+                                        EXPRESS
+                                        <img src="./LAYOUT/node_logo.png" class="ift-margin-top-5">
+                                    </div>
+                                </div>
+                                <div class="ift-home-about-boxes-bottom">
+                                    <div class="ift-text-light ift-footer-text ift-home-about-justify">
+                                        REACT
+                                        <img src="./LAYOUT/react_logo.png" class="ift-margin-top-5">
                                     </div>
                                 </div>
                             </div>
@@ -629,9 +643,8 @@
                             <div class="ift-side-by-side ift-home-services-boxes" data-aos-offset="300"
                                 data-aos="fade-up">
                                 <h4 class="ift-text-light ift-footer-text ift-margin-bottom-15">Captura de Leads</h4>
-                                <p class="ift-text-light ift-footer">Criação de campanhas, páginas de capturas de leads
-                                    e imagens
-                                    para as redes sociais.</p>
+                                <p class="ift-text-light ift-footer">Criação de páginas de capturas de leads, imagens
+                                    para as redes sociais e Google Analytics.</p>
                                 <lord-icon src="https://cdn.lordicon.com/zpxybbhl.json" trigger="loop"
                                     colors="primary:#ffffff,secondary:#fb8500" stroke="40"
                                     style="width:100px;height:100px" class="ift-margin-top-10">
