Correção no ícone bootstrap Logo

--- a/sobre/index.html
+++ b/sobre/index.html
@@ -164,7 +164,8 @@
         </div>
 
         <div style="text-align: center;">
-            <div style="display: inline-block; position: relative; bottom: -100px; margin-bottom: 30px;">
+            <div
+                style="display: inline-block; position: relative; bottom: -100px; margin-bottom: 30px; margin-right:-20px;">
                 <div class="ift-horizontal-align-about">
                     <div class="ift-home-about-boxes">
                         <div class="ift-text-light ift-footer-text ift-home-about-justify">
@@ -188,7 +189,7 @@
                     </div>
                     <div class="ift-home-about-boxes-bottom">
                         <div class="ift-text-light ift-footer-text ift-home-about-justify">
-                            BOOTSTRAP
+                            <p style="font-size: 15px; padding-top: 3px;">BOOTSTRAP</p>
                             <img src="../LAYOUT/bootstrap_logo.png" class="ift-margin-top-5">
                         </div>
                     </div>
