Correção no ícone bootstrap Logo

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                                 </div>
                                 <div class="ift-home-about-boxes-bottom">
                                     <div class="ift-text-light ift-footer-text ift-home-about-justify">
-                                        BOOTSTRAP
+                                        <p style="font-size: 15px; padding-top: 3px;">BOOTSTRAP</p>
                                         <img src="./LAYOUT/bootstrap_logo.png" class="ift-margin-top-5">
                                     </div>
                                 </div>
